<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/rlt_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/actionbar" >
        
        <ImageView
            android:id="@+id/imb_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/membership_number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </RelativeLayout>
	<ScrollView 
	    android:id="@+id/scroll_membership"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
		android:layout_below="@+id/rlt_title">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
		    <TextView
		        android:id="@+id/tv_texttitle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:paddingLeft="15dp"
		        android:paddingRight="15dp"
		        android:textColor="@color/font_color"
		        android:text="@string/membership_description_header" />
		
		    <EditText
		        android:id="@+id/et_textnumber"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/tv_texttitle"
		        android:layout_marginLeft="15dp"
		        android:layout_marginRight="15dp"
		        android:layout_marginTop="15dp"
		        android:background="@drawable/border_edittext"
		        android:inputType="number"
		        android:maxLength="9"
		        android:padding="5dp"
		        android:text="" />
		
		    <TextView
		        android:id="@+id/tv_textcontent"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/btnStartTargetId"
		        android:layout_marginTop="15dp"
		        android:paddingLeft="15dp"
		        android:textColor="@color/font_color"
		        android:paddingRight="15dp"
		        android:text="@string/membership_description_footer" />
		
		    <Button
		        android:id="@+id/btnStartTargetId"
		        android:layout_width="80dp"
		        android:layout_height="40dp"
		        android:layout_below="@+id/et_textnumber"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="15dp"
		        android:gravity="center"
		        android:background="@drawable/rounded_button"
		        android:text="@string/ok"
		        android:textColor="@android:color/white"
		        android:textSize="18sp" />
        </RelativeLayout>
	    
	</ScrollView>
	
</RelativeLayout>